--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   },
   "main": "server.js",
   "dependencies": {
-    "express": "4.16.3"
+    "express": "4.16.3",
+    "knex": "^0.15.2",
+    "pg": "^7.4.3"
   },
   "devDependencies": {
     "standard": "*"
