--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 .atom
+*.sqlite3
 env
 node_modules
+
+# ------
+# Python
+# ------
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
