--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,29 @@
 certifi==2018.8.24
 chardet==3.0.4
+click==6.7
 coreapi==2.3.3
 coreschema==0.0.4
-Django==2.1
-django-rest-swagger==2.2.0
+Django==2.1.1
 djangorestframework==3.8.2
+drf-yasg==1.10.0
+flex==6.13.2
+future==0.16.0
 idna==2.7
+inflection==0.3.1
 itypes==1.1.0
 Jinja2==2.10
+jsonpointer==1.14
+jsonschema==2.6.0
 MarkupSafe==1.0
 openapi-codec==1.3.2
 pytz==2018.5
+PyYAML==3.13
 requests==2.19.1
-simplejson==3.16.0
+rfc3987==1.3.8
+ruamel.yaml==0.15.66
+six==1.11.0
+strict-rfc3339==0.7
+swagger-spec-validator==2.4.0
 uritemplate==3.0.0
 urllib3==1.23
+validate-email==1.3
