--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ click==6.7
 coreapi==2.3.3
 coreschema==0.0.4
 Django==2.1.1
+django-cors-headers==2.4.0
 djangorestframework==3.8.2
 drf-yasg==1.10.0
 flex==6.13.2
