--- a/Pipfile
+++ b/Pipfile
@@ -37,6 +37,8 @@ uritemplate = "==3.0.0"
 urllib3 = "==1.23"
 validate-email = "==1.3"
 pillow = "*"
+ipython = "*"
+django-environ = "*"
 
 [requires]
 python_version = "3.6"
