--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,46 @@
+backcall==0.1.0
 certifi==2018.8.24
 chardet==3.0.4
 click==6.7
 coreapi==2.3.3
 coreschema==0.0.4
+decorator==4.4.0
 Django==2.1.2
 django-cors-headers==2.4.0
+django-environ==0.4.5
 djangorestframework==3.8.2
 drf-yasg==1.10.0
 flex==6.13.2
 future==0.16.0
 idna==2.7
 inflection==0.3.1
+ipython==7.8.0
+ipython-genutils==0.2.0
 itypes==1.1.0
+jedi==0.15.1
 Jinja2==2.10
 jsonpointer==1.14
 jsonschema==2.6.0
 MarkupSafe==1.0
 openapi-codec==1.3.2
+parso==0.5.1
+pexpect==4.7.0
+pickleshare==0.7.5
+Pillow==6.2.0
+prompt-toolkit==2.0.10
+ptyprocess==0.6.0
+Pygments==2.4.2
 pytz==2018.5
 PyYAML==3.13
 requests==2.20.0
 rfc3987==1.3.8
-ruamel.yaml==0.15.66
+ruamel.yaml==0.16.5
+ruamel.yaml.clib==0.2.0
 six==1.11.0
 strict-rfc3339==0.7
 swagger-spec-validator==2.4.0
+traitlets==4.3.3
 uritemplate==3.0.0
 urllib3==1.23
 validate-email==1.3
+wcwidth==0.1.7
