--- a/Pipfile
+++ b/Pipfile
@@ -13,7 +13,7 @@ coreapi = "==2.3.3"
 coreschema = "==0.0.4"
 django = "==2.1.2"
 django-cors-headers = "==2.4.0"
-djangorestframework = ">=3.9.1"
+djangorestframework = "==3.8.2"
 drf-yasg = "==1.10.0"
 flex = "==6.13.2"
 future = "==0.16.0"
